CaseCSATDeploymentToSandbox/main/default/objects/Case/fields/Acceldata_made_it_easy_for_me_to_handle__c.field-meta.xml
<CustomField>
    <fullName>Acceldata_made_it_easy_for_me_to_handle__c</fullName>
    <description>Acceldata made it easy for me to handle my issue</description>
    <inlineHelpText>Acceldata made it easy for me to handle my issue</inlineHelpText>
    <label>Aceldata made easy to me handle my isue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Neither agree nor disagree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>