CaseCSATDeploymentToSandbox/main/default/objects/Case/fields/casecsatformulafieldfour__c.field-meta.xml
<CustomField>
    <fullName>casecsatformulafieldfour__c</fullName>
    <description>This formula field is used in case csat customer response email template</description>
    <formula>LOWER(&quot;xznmoverall&quot;+SUBSTITUTE(  TEXT(Rate_of_Satisfaction_form_Support_Agent__c)  ,&quot; &quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>casecsatformulafieldfour</label>
    <type>Text</type>
</CustomField>