CaseCSATDeploymentToSandbox/main/default/objects/Case/fields/casecsatformulafieldone__c.field-meta.xml
<CustomField>
    <fullName>casecsatformulafieldone__c</fullName>
    <description>This formula field is used in case csat customer response email template</description>
    <formula>&quot;xznmrating&quot;+TEXT( how_much_like_aceldata_customer_support__c  )</formula>
    <label>casecsatformulafieldone</label>
    <type>Text</type>
</CustomField>