CaseCSATDeploymentToSandbox/main/default/objects/Case/fields/casecsatformulafieldthree__c.field-meta.xml
<CustomField>
    <fullName>casecsatformulafieldthree__c</fullName>
    <description>This formula field is used in case csat customer response email template</description>
    <formula>LOWER(&quot;xznmsecondrow&quot;+ SUBSTITUTE(TEXT(On_Time_Response_Next_Action_Plan__c),&quot; &quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>casecsatformulafieldthree</label>
    <type>Text</type>
</CustomField>