CaseCSATDeploymentToSandbox/main/default/objects/Case/fields/casecsatformulafieldtwo__c.field-meta.xml
<CustomField>
    <fullName>casecsatformulafieldtwo__c</fullName>
    <description>This formula field is used in case csat customer response email template</description>
    <formula>LOWER(&quot;xznmfirstrow&quot; +   SUBSTITUTE(TEXT(Acceldata_made_it_easy_for_me_to_handle__c),&quot; &quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>casecsatformulafieldtwo</label>
    <type>Text</type>
</CustomField>