CaseCSATDeploymentToSandbox/main/default/objects/Case/fields/how_much_like_aceldata_customer_support__c.field-meta.xml
<CustomField>
    <fullName>how_much_like_aceldata_customer_support__c</fullName>
    <description>How likely are you to recommend Acceldata&apos;s CUSTOMER SUPPORT to others?</description>
    <inlineHelpText>How likely are you to recommend Acceldata&apos;s CUSTOMER SUPPORT to others?</inlineHelpText>
    <label>how much like aceldata customer support?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>