CaseCSATDeploymentToSandbox/main/default/objects/Case/fields/On_Time_Response_Next_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>On_Time_Response_Next_Action_Plan__c</fullName>
    <description>I received timly response and next plan of actions on my ticket from Accleata Support</description>
    <inlineHelpText>I received timly response and next plan of actions on my ticket from Accleata Support</inlineHelpText>
    <label>On Time Response/Next Action Plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Neither agree nor disagree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>