CaseCSATDeploymentToSandbox/main/default/objects/Case/fields/Rate_of_Satisfaction_form_Support_Agent__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Satisfaction_form_Support_Agent__c</fullName>
    <description>Overall, how satisfied or dissatisfied are you with the support team member who assisted you on this issue?</description>
    <inlineHelpText>Overall, how satisfied or dissatisfied are you with the support team member who assisted you on this issue?</inlineHelpText>
    <label>Rate of Satisfaction form Support Agent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Neither dissatisfied nor Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Extremely Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>