CaseCSATDeploymentToSandbox/main/default/objects/Case/fields/Survey_Sent_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check whether survey has been sent or not</description>
    <label>Survey Sent</label>
    <type>Checkbox</type>
</CustomField>