CaseCSATDeploymentToSandbox/main/default/objects/Case/fields/Survey_Sent_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_Date_Time__c</fullName>
    <description>PLEASE DO NOT DELETE.......This field is used to track the 24hrs link expire time for survey page</description>
    <label>Survey Sent Date/Time</label>
    <type>DateTime</type>
</CustomField>