CaseCSATDeploymentToSandbox/main/default/objects/Case/fields/Survey_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Survey_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check if the survey is submitted or not by the customer</description>
    <label>Survey Submitted</label>
    <type>Checkbox</type>
</CustomField>